--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://test-site-h2si.vercel.app/",
   "scripts": {
     "start": "vite",
     "build": "vite build",
